Fix menu table alignment

--- a/styles.css
+++ b/styles.css
@@ -438,6 +438,10 @@ table.menu {
   background-color: var(--arguments-table-bg);
   border-radius: 3px;
 }
+table.menu tbody {
+  display: flex;
+  flex-direction: column;
+}
 table.menu::before {
   content: 'Menu';
   position: absolute;
@@ -450,9 +454,13 @@ table.menu::before {
   border-bottom: 1px solid var(--menu-separator-fg);
   width: calc(100% - 1rem);
 }
+table.menu tbody tr {
+  display: flex;
+  flex-direction: row;
+}
 
 table.menu tbody tr td:first-child {
-  width: 100%;
+  flex: 1;
 }
 
 table:not(.menu) {
